--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 @import url(reset.css);
 @import url(grid.css);
 @import url(header.css);
+@import url(footer.css);
 
 .introducao {
   display: flex;
@@ -164,53 +165,4 @@
   margin-top: 6.4rem;
 }
 
-.footer {
-  display: flex;
-  max-width: 131.6rem;
-  border-right: 0.1rem solid #000;
-  border-left: 0.1rem solid #000;
-  padding: 6.3rem 0 10rem 11.5rem;
-  align-items: center;
-}
 
-.footer .logo p {
-  margin-top: 3.2rem;
-  width: 27.2rem;
-  color: #000;
-  font-size: 2rem;
-  font-weight: 500;
-}
-
-.footer .lista {
-  margin-left: 11.2rem;
-  display: flex;
-  flex-direction: column;
-  gap: 3.2rem;
-}
-
-.footer .lista a {
-  color: #000;
-  font-family: Roboto;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.footer .input {
-  margin-left: 120px;
-}
-
-.footer .input p {
-  font-size: 2.4rem;
-  font-weight: 500;
-  margin-bottom: 3.2rem;
-}
-
-.footer .input input {
-  border: .2rem solid #000;
-  background: #fff;
-  box-shadow: .4rem .4rem 0rem 0rem #000;
-  width: 56rem;
-  height: 4.8rem;
-}
