--- a/css/footer.css
+++ b/css/footer.css
@@ -48,3 +48,14 @@
   width: 56rem;
   height: 4.8rem;
 }
+
+.footer .btn-footer {
+  border: .2rem solid #000;
+  box-shadow: .4rem .4rem 0rem 0rem #1e1e1e;
+  background: #ed4d1b;
+  width: 22.5rem;
+  height: 4.8rem;
+  font-size: 2rem;
+  font-weight: 500;
+  margin-top: 3.2rem;
+}
